[agenda] Fix overlapping hover boxes via z-index

--- a/src/pretalx/static/agenda/scss/_agenda.scss
+++ b/src/pretalx/static/agenda/scss/_agenda.scss
@@ -5,6 +5,7 @@
   background-color: $offwhite;
   padding: 8px 16px;
   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.16), 0 5px 8px 0 rgba(0, 0, 0, 0.12);
+  z-index: 100;
 
   &:hover {
     .days {
@@ -25,6 +26,7 @@
   background-color: $offwhite;
   padding: 8px 16px;
   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.16), 0 5px 8px 0 rgba(0, 0, 0, 0.12);
+  z-index: 50;
 
   &:hover {
     ul.tracks {
